Creating Event Item Component and Events page.

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,9 +1,9 @@
 /* ----------------------------- Footer Section ----------------------------- */
-.footerWrapper {
+/* .footerWrapper {
    position:absolute;
    bottom:0;
    width:100%;
-}
+} */
 
 .footer {
     /* margin: 100px 0 40px; */
