--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -3,8 +3,8 @@
   margin: 60px auto;
   max-width: 100rem;
   padding: 0 30px;
-  min-height:100%;
-  position: relative;
+  /* min-height:100%;
+  position: relative; */
 }
 
 
